# os-cemantix

./: .gitignore  Dockerfile  README.md  app.py  download_model.py  pyproject.toml
data/: interest_words_d.txt  interest_words_f.txt
static/: styles.css
templates/: base.html  game.html  index.html  result.html
